--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
             <li class="text-center beef-item">
 
-              <a href="burrito"><p class="item">BURRITO</p></a>
+              <a href="#burrito"><p class="item">BURRITO</p></a>
 
               <hr class="visible-xs">
 
@@ -73,7 +73,7 @@
 
             <li class="text-center sushi-item">
 
-              <a href="fajita"><p class="item">FAJITA</p></a>
+              <a href="#fajita"><p class="item">FAJITA</p></a>
 
            </li>
 
