--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
             <li class="text-center">
 
-              <a href="#Tacos"> <p class="item">TACOS</p></a>
+              <a href="Tacos"> <p class="item">TACOS</p></a>
 
               <hr class="visible-xs">
 
@@ -65,7 +65,7 @@
 
             <li class="text-center burrito-item">
 
-              <a href="#burrito"><p class="item">BURRITO</p> </a>
+              <a href="burrito"><p class="item">BURRITO</p> </a>
 
               <hr class="visible-xs">
 
@@ -73,7 +73,7 @@
 
             <li class="text-center fajita-item">
 
-              <a href="#fajita"><p class="item">FAJITA</p></a>
+              <a href="fajita"><p class="item">FAJITA</p></a>
 
            </li>
 
