--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
             <li class="text-center">
 
               <a href="#Tacos"> <p class="item">TACOS</p></a>
+		     <a href="Tacos"> <p class="item">TACOS</p></a>
 
               <hr class="visible-xs">
 
